update tips config and fixed image z-index levet to 9999

--- a/src/components/styles/index.less
+++ b/src/components/styles/index.less
@@ -16,6 +16,7 @@
       top: 0;
       width: auto;
       height: 100%;
+      z-index: 9999;
     }
 
     .bgImg {
